--- a/mydidata/templates/mydidata/percentage_progress.html
+++ b/mydidata/templates/mydidata/percentage_progress.html
@@ -1,8 +1,8 @@
 {% extends 'mydidata/base.html' %}
 
 {% block content %}
-    {% load question_extras %}
-    {% load answer_extras %}
+    {% load student_extras %}
+    
     <div id="content-container" class="container p-none">
 		{% if classroom %}
 			<h1>{{classroom.name}}</h1>
@@ -11,94 +11,91 @@
 		
         
         
-            <table id="cd-table" class="table table-hover">
-                <tbody>
+        <table id="cd-table" class="table table-hover">
+            <tbody>
+                <tr>
+                    <th>Aluno</th>
+                    <th>Nota</th>
+                </tr>
+                {% for student_grade in students_grades%}
+                    {% get_student student_grade as s%}
+
+                    {% get_grade student_grade as grade%}
+
                     <tr>
-                        <th>Aluno</th>
-                        <th>Nota</th>
-                        
-                        {%for topic in topics %}                        
-                            <th>{{topic.topic_title}}
-                        {%endfor%}
-                    </tr>
-                    {% for s in topic_dict.keys%}
-                        {% get_topic_percent topic_dict s as percents%}                                            
-                        <tr>
                         <td>
                             <a href='/mydidata/update_profile/{{s.id}}'>{{s.first_name}}&nbsp{{s.last_name}}</a>
                         </td>
-                        
-                        {% for t_p in percents%}
-                            {% get_topic t_p  as topic%}
-                            {% get_percent t_p  as percent%}                            
-                            <td>{{percent}}</td>
-                        {%endfor%}
-                        </tr>
-                    {%endfor%}
-                    
-                </tbody>
-            </table>
-            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
-                Lançar no Acadêmico
-              </button>
-              
-              <!-- Modal -->
-              <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                <div class="modal-dialog" role="document">
-                  <div class="modal-content">
-                    <div class="modal-header">
-                      <h5 class="modal-title" id="exampleModalLabel">Acesso do Acadêmico</h5>
-                      <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                      </button>
-                    </div>
+                        <td>{{grade}}</td>
+                    </tr>
+                {%endfor%}
+                
+            </tbody>
+        </table>
 
-                    <div class="modal-body">
-                        {%for topic in topics %}
-                        <form id="login-form" method="post" 
-                                action="/mydidata/academico/{{classroom.id}}/{{topic.uuid}}/">
-                            {% csrf_token %}
-                            <table class="table">
-                                <tr>
-                                    <td><label for="username">Nome de Usuário</label></td>
-                                    <td><input id="username" name="username" 
-                                                type="text" class="form-control"></td>
-                                </tr>
-                                <tr>
-                                    <td><label for="password">Senha</label></td>
-                                    <td><input id="password" name="password" 
-                                                type="password" class="form-control"></td>
-                                </tr>
-                            
-                            </table>
-                            <div class="form-group">
-                                <label for="etapa">Selecione a etapa para o lançamento</label>
-                                <select class="form-control-sm" id="etapa" name="etapa">
-                                  <option>1BIM</option>
-                                  <option>2BIM</option>
-                                  <option>3BIM</option>
-                                  <option>4BIM</option>                                  
-                                </select>
-                              </div>
-                            {% if form.errors %}
-                                <p class=" label label-danger">
-                                    O login e a senha não combinam.                        
-                                </p>                    
-                            {% endif %}
-            
-                            <input type="submit" value="Login" 
-                                    class="btn btn-primary pull-right" />
-                            
-                            
-                        </form>
-                        {% endfor %}
-      
-                    </div>
-                    <div class="modal-footer">
-                      <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
-                    </div>
-                  </div>
+        <a href = '/mydidata/class_progress/{{classroom.id}}'> Voltar </a>
+        
+        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+            Lançar no Acadêmico
+        </button>
+              
+        <!-- Modal -->
+        <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Acesso do Acadêmico</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                    </button>
                 </div>
-              </div>        
+
+                <div class="modal-body">
+                    
+                    <form id="login-form" method="post" 
+                            action="/mydidata/academico/{{classroom.id}}/{{topic.uuid}}/">
+                        {% csrf_token %}
+                        <table class="table">
+                            <tr>
+                                <td><label for="username">Nome de Usuário</label></td>
+                                <td><input id="username" name="username" 
+                                            type="text" class="form-control"></td>
+                            </tr>
+                            <tr>
+                                <td><label for="password">Senha</label></td>
+                                <td><input id="password" name="password" 
+                                            type="password" class="form-control"></td>
+                            </tr>
+                        
+                        </table>
+                        <div class="form-group">
+                            <label for="etapa">Selecione a etapa para o lançamento</label>
+                            <select class="form-control-sm" id="etapa" name="etapa">
+                                <option>1BIM</option>
+                                <option>2BIM</option>
+                                <option>3BIM</option>
+                                <option>4BIM</option>                                  
+                            </select>
+                            </div>
+                        {% if form.errors %}
+                            <p class=" label label-danger">
+                                O login e a senha não combinam.                        
+                            </p>                    
+                        {% endif %}
+        
+                        <input type="submit" value="Login" 
+                                class="btn btn-primary pull-right" />
+                        
+                        
+                    </form>
+                    
+
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
+                </div>
+                </div>
+            </div>
+        </div>        
     </div>
 {% endblock %}
