--- a/mydidata/templates/mydidata/academico_results.html
+++ b/mydidata/templates/mydidata/academico_results.html
@@ -6,7 +6,7 @@
     <div id="content-container" class="container p-none">
 		{% if classroom %}
             <h1> Problemas no Lançamento para: {{classroom.name}}</h1>
-            <h2>{{topic.topic_title}}</h2>
+            <h2>{{title}}</h2>
 		{%endif%}
 		
         
