Mudança em icone de erro

--- a/mydidata/templates/mydidata/my_progress.html
+++ b/mydidata/templates/mydidata/my_progress.html
@@ -44,7 +44,7 @@
                                                     <a href="{{answer.get_detail_url}}"><i class="fa fa-check-circle"></i></a>
                                                     
                                                     {%else%}
-                                                        <a href="{{answer.get_detail_url}}"><i class="fas fa-times-circle"></i></a>
+                                                        <a href="{{answer.get_detail_url}}"><i title= "Correções solicitadas" style="color: red" class="fas fa-exclamation-triangle"></i></a>
                                                     {%endif%}
                                                 {%endif%}
                                             </td>
