--- a/mydidata/templates/mydidata/topic_progress.html
+++ b/mydidata/templates/mydidata/topic_progress.html
@@ -56,7 +56,7 @@
                                                  <a href="{{answer.get_detail_url}}"><i class="fa fa-check-circle"></i></span></a>
                                                 
                                                  {%else%}
-                                                     <a href="{{answer.get_detail_url}}"><i class="fas fa-times-circle"></i></a>
+                                                     <a href="{{answer.get_detail_url}}"><i class="fas fa-exclamation-triangle"></i></a>
                                                  {%endif%}
                                             {%endif%}
                                         </td>
