--- a/mydidata/templates/mydidata/home.html
+++ b/mydidata/templates/mydidata/home.html
@@ -177,6 +177,7 @@
                     <!-- <div class="card-body">You can put anything you want inside of these side widgets. They are easy to use, and feature the Bootstrap 5 card component!</div> -->
                 <!-- </div> -->
             </div>
+          </div>
         </div>
         
   
