--- a/mydidata/templates/mydidata/base.html
+++ b/mydidata/templates/mydidata/base.html
@@ -64,11 +64,11 @@
                     {%endif%}
                     <li class="nav-item active">
                     <a class="nav-link" href="{% url 'mydidata:disciplines' %}"
-                                    >Assuntos</a>
+                                    >Meus Cursos</a>
                     </li>
-                    <li class="nav-item active"><a class="nav-link" href="{% url 'mydidata:my_progress' %}"
-                    >Atividades</a></li>
                     {%if user.is_superuser%}
+                        <li class="nav-item active"><a class="nav-link" href="{% url 'mydidata:my_progress' %}"
+                            >Atividades</a></li>
                         <li class="nav-item active"><a class="nav-link" href="{% url 'mydidata:tests' %}"                    
                         >Avaliações</a></li>
                     {%endif%}
