correcting subject search bug

--- a/mydidata/templates/mydidata/home.html
+++ b/mydidata/templates/mydidata/home.html
@@ -158,14 +158,14 @@
                             <div class="col-sm-6">
                                 <ul class="list-unstyled mb-0">
                                   {%for c in categories_right%}
-                                    <li><a href="/mydidata/topics_by_subject/{{c}}">{{c}}</a></li>
+                                    <li><a href="/mydidata/topics_by_subject?subject={{c}}">{{c}}</a></li>
                                   {%endfor%}
                                 </ul>
                             </div>
                             <div class="col-sm-6">
                                 <ul class="list-unstyled mb-0">
                                   {%for c in categories_left%}
-                                    <li><a href="/mydidata/topics_by_subject/{{c}}">{{c}}</a></li>
+                                    <li><a href="/mydidata/topics_by_subject?subject={{c}}">{{c}}</a></li>
                                   {%endfor%}
                                 </ul>
                             </div>
