--- a/mydidata/templates/mydidata/home.html
+++ b/mydidata/templates/mydidata/home.html
@@ -76,7 +76,7 @@
             <div class="col-lg-8">
                 <!-- Featured blog post-->
                 <div class="card mb-4">
-                    <a href="#!"><img class="card-img-top" src="{{main.thumbnail.url}}" alt="..." /></a>
+                    <a href="{{main.get_absolute_url}}"><img class="card-img-top" src="{{main.thumbnail.url}}" alt="..." /></a>
 
                     <div class="card-body">
                         <div class="small text-muted">{{main.publish_date}}</div>
