escaping html texts for automatic correction

--- a/mydidata/templates/mydidata/discursive_answer_detail.html
+++ b/mydidata/templates/mydidata/discursive_answer_detail.html
@@ -42,7 +42,7 @@
                     {%if answer.id and answer.answer_text and answer.question.ref_keywords%}
                         <div class="col-md-9">
                             
-                            <a class="btn btn-primary btn-lg" role="button" href="/mydidata/get_corrections/{{answer.id}}">Corrigir Automaticamente</a>
+                            <a class="btn btn-primary btn-lg" role="button" href="/mydidata/get_corrections/{{answer.id}}">Analisar Resposta</a>
                             {%if answer.question.next_question_url%}
                                 <a class="btn btn-primary btn-lg" role="button" href="{{answer.question.next_question_url}}">Próxima Questão</a>
                     
