Add progress by discipline

--- a/mydidata/templates/mydidata/base.html
+++ b/mydidata/templates/mydidata/base.html
@@ -66,7 +66,7 @@
                     <a class="nav-link" href="{% url 'mydidata:disciplines' %}"
                                     >Assuntos</a>
                     </li>
-                    <li class="nav-item active"><a class="nav-link" href="{% url 'mydidata:my_progress' %}"
+                    <li class="nav-item active"><a class="nav-link" href="{% url 'mydidata:disciplines' %}"
                     >Atividades</a></li>
                     {%if user.is_superuser%}
                         <li class="nav-item active"><a class="nav-link" href="{% url 'mydidata:tests' %}"                    
