--- a/mydidata/templates/mydidata/discipline_list.html
+++ b/mydidata/templates/mydidata/discipline_list.html
@@ -9,11 +9,17 @@
                 {# Account Search Form #}
             </div>
             {# List of Accounts #}
-            <div class="list-group">
+            <ul class="list-group">
                 {% for discipline in disciplines %}
-                    <a href="{{ discipline.get_absolute_url }}" class="list-group-item list-group-item-action">{{ discipline.name }}</a>
+                <li class="list-group-item d-flex justify-content-between align-items-center">
+                    <a href="{{ discipline.get_absolute_url }}">{{ discipline.name }}</a>
+                    
+                    <a class="badge badge-primary badge-pill" href="/mydidata/my_progress/{{discipline.uuid}}">Ver Progresso</a>
+                </li>
+                    
+                    
                 {% endfor %}
-            </div>
+            </ul>
             {# Pagination Section #}
         </div>
     </div>
