--- a/mydidata/templates/mydidata/topic_progress.html
+++ b/mydidata/templates/mydidata/topic_progress.html
@@ -50,25 +50,25 @@
                                         <td>
                                             {%if answer.is_sent%}
                                                 {%if user.is_superuser%}
-                                                    <a href="{{answer.feedback_url}}"><i class="fa fa-paper-plane"></i></a>
+                                                    <a href="{{answer.feedback_url}}"><i class="bi bi-cloud-check"></i></a>
                                                 {%else%}                                                
-                                                    <a href="{{answer.get_detail_url}}"><i class="fa fa-paper-plane"></i></a>
+                                                    <a href="{{answer.get_detail_url}}"><i class="bi bi-cloud-check"></i></a>
                                                 {%endif%}
 
                                                  
                                             {%else%}
                                                 {%if answer.is_ok%}
                                                     {%if user.is_superuser%}
-                                                        <a href="{{answer.feedback_url}}"><i class="fa fa-check-circle"></i></a>
+                                                        <a href="{{answer.feedback_url}}"><i class="bi bi-check-circle-fill"></i></a>
                                                     {%else%}                                                
-                                                        <a href="{{answer.get_detail_url}}"><i class="fa fa-check-circle"></i></a>
+                                                        <a href="{{answer.get_detail_url}}"><i class="bi bi-check-circle-fill"></i></a>
                                                     {%endif%}
                                                 
                                                  {%else%}
                                                     {%if user.is_superuser%}
-                                                        <a href="{{answer.feedback_url}}"><i style="color: red" class="fas fa-exclamation-triangle"></i></a>
+                                                        <a href="{{answer.feedback_url}}"><i style="color: red" class="bi bi-exclamation-triangle-fill"></i></a>
                                                     {%else%}                                                
-                                                        <a href="{{answer.get_detail_url}}"><i style="color: red" class="fas fa-exclamation-triangle"></i></a>
+                                                        <a href="{{answer.get_detail_url}}"><i style="color: red" class="bi bi-exclamation-triangle-fill"></i></a>
                                                     {%endif%}
                                                                                           
                                                  {%endif%}
