correct large images

--- a/mydidata/templates/mydidata/discursive_answer_detail.html
+++ b/mydidata/templates/mydidata/discursive_answer_detail.html
@@ -24,7 +24,7 @@
                     
                     <div class="col-md-9">
                         <h3 class="gi-sh">Resposta</h3> 
-                        (<a href="{{ answer.question.get_answer_url }}" class="p-r-none">Editar <i class="fas fa-pencil-alt"></i></a>)
+                        (<a href="{{ answer.question.get_answer_url }}" class="p-r-none">Editar <i class="bi bi-pencil-square"></i></a>)
                         <p>{{ answer.answer_text | safe}}
                             
                         </p>
